fix inconsistent width for table on mobile

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   overflow: auto;
-  max-width: 500px;
+  max-width: 100vw;
   background-color: var(--color-darkred);
 }
 
